rename to misty

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
-	<title>CRT ftw</title>
+	<title>Misty</title>
 	<!-- BabylonJS 4.0.3 graphics engine: https://www.babylonjs.com/ -->
 	<script src="deps/babylon-4.0.3.js"></script>
 	<script src="babylonjs-4.0.3.loaders.min.js"</script>
