wire WebSocket game conn with babylon scene

--- a/index.html
+++ b/index.html
@@ -24,56 +24,18 @@
 	  }
 	</style>
 	<script>
-	  function log(str) {
-		  var div = document.getElementById("log");
-		  var newDiv = document.createElement("div");
-		  newDiv.innerHTML = "<br>" + str;
-
-		  while (newDiv.firstChild) {
-			  div.appendChild(newDiv.firstChild);
-		  }
-	  }
-	  // WebSocket
-	  function startWS() {
-		  fr = new FileReader
-		  fr.onload = function () {
-			  log(fr.result);
-		  }
-		  try {
-			  ws = new WebSocket("ws://localhost:8081", "client0.argonavis.io");
-		  } catch (error) {
-			  document.getElementById("log").innerHTML = "error";
-		  }
-		  document.getElementById("log").innerHTML = "readyState: " + ws.readyState
-
-		  ws.onerror = function(e) { log("OnError "); };
-		  ws.onclose = function(e) { log("OnClose code: " + e.code + " reason: " + e.reason); };
-
-		  ws.onopen = function() {
-			  log("OnOpen protocol: " + ws.protocol);
-			  buf = new Uint16Array(1);
-			  buf[0] = 900;
-			  ws.send(buf);
-		  };
-
-		  ws.onmessage = function(msg) {
-			  log("OnMessage:");
-			  fr.readAsText(msg.data);
-			  // TODO: JSON decode
-			  // TODO: update babylon scene with global game state
-		  }
-	  }
-
 	</script>
   </head>
   <body>
 	<!--
 	<h2>Argo Navis dev/test web client55</h2>
-	<button type="button" onclick="startWS()">Start WebSocket</button>
+	<button type="button" onclick="startWebSocket()">Start WebSocket</button>
 	<p id="log"></p>
 	-->
 	<canvas id="renderCanvas"></canvas>
 	<script>
+	  var camera;
+	  var ship, moon;
 	  window.addEventListener('DOMContentLoaded', function() {
 		  // Babylon Scene
 		  var canvas = document.getElementById('renderCanvas');
@@ -82,14 +44,16 @@
 		  // TODO: load scene objects from server state
 		  var createScene = function() {
 			  var scene = new BABYLON.Scene(engine);
-
 			  var light = new BABYLON.DirectionalLight('light1', new BABYLON.Vector3(-100000,-200000,-100000), scene);
-			  light.intensity = 2.0;
+			  light.intensity = 1.0;
 			  //light.lightmapMode = BABYLON.Light.LIGHTMAP_SHADOWSONLY;
 
+			  earthPos = new BABYLON.Vector3(8000, 6000, -1000);
+			  moonPos = new BABYLON.Vector3(0, 0, 0);
+			  shipPos = moonPos.add(new BABYLON.Vector3(-200, 600,-200));
 			  var earth = BABYLON.MeshBuilder.CreateSphere('earth', {segments:16, diameter:12742}, scene);
-			  var moon = BABYLON.MeshBuilder.CreateSphere('moon', {segments:16, diameter:470}, scene);
-			  var ship = BABYLON.MeshBuilder.CreateBox('ship', {height: 0.1, width: 0.2, depth: 0.6}, scene);
+			  moon = BABYLON.MeshBuilder.CreateSphere('moon', {segments:16, diameter:940}, scene);
+			  ship = BABYLON.MeshBuilder.CreateBox('ship', {height: 0.1, width: 0.2, depth: 0.6}, scene);
 
 			  earth.renderingGroupId = 1;
 			  moon.renderingGroupId = 1;
@@ -98,43 +62,41 @@
 			  // Earth pos is (0,0,0)
 			  earth.addRotation(Math.PI, 0, 0).addRotation(0, 0, 0);//.addRotation(0, 0, Math.PI/4);
 
-			  moonPos = new BABYLON.Vector3(-8000, 8000, -1000);
+			  earth.setPositionWithLocalVector(earthPos);
 			  moon.setPositionWithLocalVector(moonPos);
-
-			  shipPos = moonPos.add(new BABYLON.Vector3(-100,400,-100));
 			  ship.setPositionWithLocalVector(shipPos);
 
 			  var earthMaterial = new BABYLON.StandardMaterial("earthMaterial", scene);
-			  earthMaterial.diffuseTexture = new BABYLON.Texture("http://localhost:8081/assets/8k_earth_daymap.jpg", scene);
-			  //earthMaterial.specularTexture = new BABYLON.Texture("http://localhost:8081/assets/8k_earth_specular_map.tif", scene);
-			  earthMaterial.emissiveTexture = new BABYLON.Texture("http://localhost:8081/assets/8k_earth_nightmap.jpg", scene);
-			  //earthMaterial.ambientTexture = new BABYLON.Texture("http://localhost:8081/assets/8k_earth_daymap.jpg", scene);
+			  earthMaterial.diffuseTexture = new BABYLON.Texture("http://localhost:8082/assets/8k_earth_daymap.jpg", scene);
+			  //earthMaterial.specularTexture = new BABYLON.Texture("http://localhost:8082/assets/8k_earth_specular_map.tif", scene);
+			  earthMaterial.emissiveTexture = new BABYLON.Texture("http://localhost:8082/assets/8k_earth_nightmap.jpg", scene);
+			  //earthMaterial.ambientTexture = new BABYLON.Texture("http://localhost:8082/assets/8k_earth_daymap.jpg", scene);
 			  earthMaterial.specularColor = new BABYLON.Color3(0,0,0);
 			  earth.material = earthMaterial;
 
 			  var moonMaterial = new BABYLON.StandardMaterial("moonMaterial", scene);
-			  moonMaterial.diffuseTexture = new BABYLON.Texture("http://localhost:8081/assets/4k_ceres_fictional.jpg", scene);
+			  moonMaterial.diffuseTexture = new BABYLON.Texture("http://localhost:8082/assets/4k_ceres_fictional.jpg", scene);
 			  moonMaterial.specularColor = new BABYLON.Color3(0,0,0);
 			  moon.material = moonMaterial;
 
 			  moon.addRotation(Math.PI/2, 0, 0).addRotation(0, 0, 0);//.addRotation(0, 0, Math.PI/4);
 
 			  var shipMaterial = new BABYLON.StandardMaterial("shipMaterial", scene);
-			  shipMaterial.diffuseTexture = new BABYLON.Texture("http://localhost:8081/assets/sci-fi-texture.jpg", scene);
-			  shipMaterial.emissiveTexture = new BABYLON.Texture("http://localhost:8081/assets/sci-fi-texture2.jpg", scene);
+			  shipMaterial.diffuseTexture = new BABYLON.Texture("http://localhost:8082/assets/sci-fi-texture.jpg", scene);
+			  shipMaterial.emissiveTexture = new BABYLON.Texture("http://localhost:8082/assets/sci-fi-texture2.jpg", scene);
 			  shipMaterial.specularColor = new BABYLON.Color3(0,0,0);
 			  ship.material = shipMaterial;
 
 			  //
 
-			  var camera = new BABYLON.ArcRotateCamera('camera', Math.PI*1.13, Math.PI*0.28, 2, shipPos, scene);
+			  camera = new BABYLON.ArcRotateCamera('camera', Math.PI*1.13, Math.PI*0.28, 2, shipPos, scene);
 			  camera.lowerRadiusLimit = 1.5;
 			  camera.upperRadiusLimit = 100;
 			  camera.attachControl(canvas, false);
 			  camera.wheelPrecision = 10;
 			  //camera.setMatUp();
 
-			  var spaceTexture = new BABYLON.CubeTexture("http://localhost:8081/assets/space/space", scene);
+			  var spaceTexture = new BABYLON.CubeTexture("http://localhost:8082/assets/space/space", scene);
 			  scene.createDefaultSkybox(spaceTexture, false, 10000);
 
 			  return scene;
@@ -148,7 +110,58 @@
 		  window.addEventListener('resize', function() {
 			  engine.resize();
 		  });
+
+		  startWebSocket();
 	  });
+
+	  function startWebSocket() {
+		  fr = new FileReader
+		  fr.onload = function () {
+			  console.log(fr.result);
+			  j = JSON.parse(fr.result);
+			  // TODO: map generic entities to babylon objects
+			  pos = j[0]["Ents"][0].Pos;
+			  console.log("updating ship pos: " + pos);
+			  v3 = new BABYLON.Vector3(pos.X, pos.Y, pos.Z);
+			  ship.setPositionWithLocalVector(v3);
+			  camera.setTarget(v3);
+		  }
+		  try {
+			  ws = new WebSocket("ws://localhost:8081", "client0.argonavis.io");
+		  } catch (error) {
+			  console.log("new WebSocket error: " + error);
+			  //document.getElementById("log").innerHTML = "error";
+		  }
+		  //document.getElementById("log").innerHTML = "readyState: " + ws.readyState
+		  console.log("ws.readyState: " + ws.readyState);
+
+		  ws.onerror = function(e) { console.log("OnError "); };
+		  ws.onclose = function(e) { console.log("OnClose code: " + e.code + " reason: " + e.reason); };
+
+		  ws.onopen = function() {
+			  console.log("OnOpen protocol: " + ws.protocol);
+			  buf = new Uint16Array(1);
+			  buf[0] = 900;
+			  ws.send(buf);
+		  };
+
+		  ws.onmessage = function(msg) {
+			  console.log("OnMessage:");
+			  fr.readAsText(msg.data);
+			  // TODO: JSON decode
+			  // TODO: update babylon scene with global game state
+		  }
+	  }
+
+	  function log(str) {
+		  var div = document.getElementById("log");
+		  var newDiv = document.createElement("div");
+		  newDiv.innerHTML = "<br>" + str;
+
+		  while (newDiv.firstChild) {
+			  div.appendChild(newDiv.firstChild);
+		  }
+	  }
 	</script>
   </body>
 </html>
