--- a/index.html
+++ b/index.html
@@ -52,13 +52,18 @@
 			  earthPos = new BABYLON.Vector3(8000, 6000, -1000);
 			  moonPos = new BABYLON.Vector3(0, 0, 0);
 			  shipPos = moonPos.add(new BABYLON.Vector3(-200, 600,-200));
+			  shipPos2 = shipPos.add(new BABYLON.Vector3(2,0,2));
+
+			  shipRot = new BABYLON.Vector3(0, 0, 0);
 			  var earth = BABYLON.MeshBuilder.CreateSphere('earth', {segments:64, diameter:12742}, scene);
 			  moon = BABYLON.MeshBuilder.CreateSphere('moon', {segments:64, diameter:940}, scene);
 			  ship = BABYLON.MeshBuilder.CreateBox('ship', {height: 0.1, width: 0.2, depth: 0.6}, scene);
+			  ship2 = BABYLON.MeshBuilder.CreateBox('ship2', {height: 0.4, width: 0.4, depth: 0.4}, scene);
 
 			  earth.renderingGroupId = 1;
 			  moon.renderingGroupId = 1;
 			  ship.renderingGroupId = 1;
+			  ship2.renderingGroupId = 1;
 
 			  // Earth pos is (0,0,0)
 			  earth.addRotation(Math.PI, 0, 0).addRotation(0, 0, 0);//.addRotation(0, 0, Math.PI/4);
@@ -66,6 +71,7 @@
 			  earth.setPositionWithLocalVector(earthPos);
 			  moon.setPositionWithLocalVector(moonPos);
 			  ship.setPositionWithLocalVector(shipPos);
+			  ship2.setPositionWithLocalVector(shipPos2);
 
 			  var earthMaterial = new BABYLON.StandardMaterial("earthMaterial", scene);
 			  earthMaterial.diffuseTexture = new BABYLON.Texture("http://localhost:8082/assets/8k_earth_daymap.jpg", scene);
@@ -88,8 +94,11 @@
 			  shipMaterial.specularColor = new BABYLON.Color3(0,0,0);
 			  ship.material = shipMaterial;
 
-			  camera = new BABYLON.ArcRotateCamera('camera', Math.PI*1.13, Math.PI*0.28, 2, shipPos, scene);
-			  camera.lowerRadiusLimit = 1.5;
+			  ship2.material = shipMaterial
+
+			  cameraPos = shipPos.clone()
+			  camera = new BABYLON.ArcRotateCamera('camera', Math.PI*1.13, Math.PI*0.28, 2, cameraPos, scene);
+			  camera.lowerRadiusLimit = 1.4;
 			  camera.upperRadiusLimit = 100;
 			  camera.wheelPrecision = 10;
 			  //camera.setMatUp();
@@ -123,16 +132,18 @@
 			  last = now;
 
 			  s = elapsed / 1000;
-			  // TODO: simple interpolation of position and orientation from velocity
-			  // and angular velocity.  exact sync every X seconds
 
-			  //console.log("elapsed: " + elapsed + " (" + seconds + ") seconds");
-			  d = shipVel.multiply(new BABYLON.Vector3(s, s, s));
-			  //console.log("vel: " + shipVel + " pos: " + shipPos + " d: " + d);
+			  posDelta = shipVel.multiply(new BABYLON.Vector3(s, s, s));
+			  shipPos = shipPos.add(posDelta);
+			  ship.position = shipPos;
 
-			  shipPos = shipPos.add(d);
-			  //ship.setPositionWithLocalVector(shipPos);
-			  camera.setTarget(shipPos);
+		      oriDelta = shipRot.multiply(new BABYLON.Vector3(s, s, s));
+			  //console.log("FUNK: oriDelta: " + oriDelta)
+			  ship.addRotation(oriDelta.x, oriDelta.y, oriDelta.z);
+
+
+			  t = shipPos.clone();
+			  camera.setTarget(t);
 			  scene.render();
 		  });
 
@@ -149,25 +160,13 @@
 		  fr.onload = function () {
 			  console.log(fr.result);
 			  j = JSON.parse(fr.result);
-			  // TODO: map generic entities to babylon objects
 			  vel = j[0]["Ents"][0].Vel;
-			  //console.log("updating ship pos: " + pos);
+			  rot = j[0]["Ents"][0].Rot;
+
 			  shipVel = new BABYLON.Vector3(vel.X/1000, vel.Y/1000, vel.Z/1000);
-
-			  o = j[0]["Ents"][0].Ori;
-			  q = new BABYLON.Quaternion(o.I, o.J, o.K, o.R);
-			  ea = q.toEulerAngles();
-			  console.log("WTF " + q.toString());
-			  console.log("WTF " + ea.toString());
-			  //console.log("Euler Angles: x: " + ea.x + " y:" + ea.y + " z:" + ea.z);
-			  //ship.setPivotPoint(ship.position);
-			  //ship.addRotation(ea.x, ea.y, ea.z);
-
-			  //ship.addRotation(Math.PI/100, 0, 0);
-			  ship.addRotation(ea.x, ea.y, ea.z);
-
-			  //ship.rotationQuaternion = q;
-			  //ship.rotate(new BABYLON.Vector3(-1, 3, -10), 7 * Math.PI / 12, BABYLON.Space.LOCAL);
+			  shipRot = new BABYLON.Vector3(rot.X, rot.Y, rot.Z);
+			  //console.log("FUNK: shipVel: " + shipVel)
+			  console.log("FUNK: shipRot: " + shipRot)
 
 		  }
 		  try {
@@ -208,12 +207,36 @@
 	  }
 
 	  document.addEventListener('keydown', function(event) {
-		  switch(event.key) {
-		  case "s":
-			  obj = {"action": "rotate", "entity": "42", "params": {"duration": 10.0, "torque": {"x":500.0,"y":200.0,"z":20.0}}}
-			  ws.send(JSON.stringify(obj))
-			  break;
-		  default:
+		  if (event.key == " ") {
+			  force = 50000.0;
+			  obj = {"action": "engine", "entity": "42", "params": {"duration": 1.0, "force": force}};
+			  ws.send(JSON.stringify(obj));
+		  }
+
+		  if(["w","s","a","d","q","e"].includes(event.key)) {
+			  torque = {"x":0.0,"y":0.0,"z":0.0};
+			  switch(event.key) {
+			  case "w":
+				  torque.x = 5000.0;
+				  break;
+			  case "s":
+				  torque.x = -5000.0;
+				  break;
+			  case "a":
+				  torque.y = 5000.0;
+				  break;
+			  case "d":
+				  torque.y = -5000.0;
+				  break;
+			  case "q":
+				  torque.z = 5000.0;
+				  break;
+			  case "e":
+				  torque.z = -5000.0;
+				  break;
+			  }
+			  obj = {"action": "rotate", "entity": "42", "params": {"duration": 1.0, "force": torque}};
+			  ws.send(JSON.stringify(obj));
 		  }
 	  });
 	</script>
